# easy-apply

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  application.py  docker-compose.yml  pyproject.toml  requirements.txt
easyapplyapp/: Dockerfile  __init__.py  auth.py  db.py  models.py  profile.py  requirements.txt
easyapplyapp/files/coverletters/: l6w9fbtmwjmsr9lhschu.html
easyapplyapp/files/resumes/: Amazon Web Services (AWS) Data Center IT Support Engineer Resume  qx4cuir91zkwlge7npip.html
easyapplyapp/services/: cover_letter_data.json  llm_handler.py  pdf_generator.py  resume_data.json  strings.py
easyapplyapp/services/styles/: cover_letter_template_1_styles.css  resume_template_1_style.css
easyapplyapp/services/templates/: cover_letter_template_1.html  resume_template_1.html
easyapplyapp/static/: apply.js  base.js  create.js  style.css
easyapplyapp/templates/: base.html
easyapplyapp/templates/app/: apply.html  create.html  index.html  update.html  update_application.html
nginx/: nginx.conf
tests/: conftest.py  test_auth.py  test_db.py  test_factory.py  test_profile.py
